--- a/news/templates/news.html
+++ b/news/templates/news.html
@@ -1,19 +1,29 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Clickoncar News</title>
-</head>
-<body>
+{% extends 'base.html' %}
+
 {% block content %}
 {% for article in object_list %}
-<div class="article-entry">
-<h2><a href="{% url 'article_detail' article.pk %}">{{ article.title }}</a></h2>
-    <h5>{{ article.datetime }}</h5>
-<p>{{ article.description }}</p>
-</div>
+    <div class="card">
+      <h2><a href="{% url 'article_detail' article.slug %}">{{ article.title }}</a></h2>
+      <h5>{{ article.datetime }}</h5>
+      <div class="fakeimg" style="height:200px;"><img src="../media/{{ article.image }}" style="width:100%"></div>
+      <p>{{ article.description }}</p>
+    </div>
 {% endfor %}
-{% endblock content %}
+    <div class="pagination">
+    <span class="step-links">
+        {% if page_obj.has_previous %}
+            <a href="?page=1">&laquo; first</a>
+            <a href="?page={{ page_obj.previous_page_number }}">previous</a>
+        {% endif %}
 
-</body>
-</html>
+        <span class="current">
+            Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}.
+        </span>
+
+        {% if page_obj.has_next %}
+            <a href="?page={{ page_obj.next_page_number }}">next</a>
+            <a href="?page={{ page_obj.paginator.num_pages }}">last &raquo;</a>
+        {% endif %}
+    </span>
+    </div>
+{% endblock content %}
