--- a/dealers/templates/dealers_list.html
+++ b/dealers/templates/dealers_list.html
@@ -1,10 +1,32 @@
 {% extends 'base.html' %}
 
+{% block script %}
+       <style>
+    .grid-container {
+        display: grid;
+        grid-template-columns: 33% 33% 33%;
+        grid-template-rows: auto auto;
+    }
+[class^="grid-item"] {
+  border: 1px solid #fff;
+  min-height: 2.5em;
+  line-height: 2.5em;
+  text-align: center;
+  color: #fff;
+}
+.grid-item {
+
+}
+</style>
+{% endblock script %}
+
 {% block content %}
-{% for dealer in object_list %}
-<div class="dealer-entry">
-<a href="{% url 'dealers_by_brand' dealer.brand.tag %}{{ dealer.pk }}/">{{ dealer.company_name }}</a>
-</div>
-{% endfor %}
+        <div class="grid-container">
+            {% for dealer in dealers_list %}
+            <div class="grid-item">
+                <h2><a href="{% url 'dealers_by_brand' dealer.brand.slug %}{{ dealer.pk }}/">{{ dealer.company_name }}</a></h2>
+            </div>
+            {% endfor %}
+        </div>
 {% endblock content %}
 
