--- a/dealers/templates/dealer_brands.html
+++ b/dealers/templates/dealer_brands.html
@@ -1,9 +1,10 @@
 {% extends 'base.html' %}
+{% load static %}
 {% block script %}
     <style>
     .grid-container {
         display: grid;
-        grid-template-columns: 33% 33% 33%;
+        grid-template-columns: 25% 25% 25% 25%;
         grid-template-rows: auto auto;
     }
 [class^="grid-item"] {
@@ -23,7 +24,7 @@
     <div class="grid-container">
     {% for dealer in object_list %}
         <div class="grid-item">
-        <a href="{% url 'brands_list' %}{{ dealer.slug }}/">{{ dealer.brand }}</a>
+          <img src="../media/{{ dealer.logo }}">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="{{ dealer.slug }}/">{{ dealer.brand }}</a><span style="font-size: 0.5em; color: black">   {{ dealer.dealer_set.count }}</span>
         </div>
     {% endfor %}
     </div>
