--- a/templates/base.html
+++ b/templates/base.html
@@ -96,6 +96,26 @@ body {
   background-color: #ddd;
   color: black;
 }
+.rightnav {
+  background-color: #333;
+  overflow: hidden;
+}
+
+/* Style the links inside the navigation bar */
+.rightnav a {
+  display: block;
+  color: #f2f2f2;
+  text-align: left;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+/* Change the color of links on hover */
+.rightnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
 
 </style>
 
@@ -110,10 +130,9 @@ body {
 </div>
 
 <div class="topnav">
-  <a href="/">Home</a>
-  <a href="/news">News</a>
-  <a href="/dealers">Dealers</a>
-  <a href="#about">About :)</a>
+    <a href="/">Home</a>
+    <a href="/news">News</a>
+    <a href="/dealers">Dealers</a>
 </div>
 
 <div class="row">
@@ -123,11 +142,28 @@ body {
 
   </div>
   <div class="rightcolumn">
-    <div class="card">
-      <h2>About Me</h2>
-      <div class="fakeimg" style="height:100px;">Image</div>
-      <p>Some text about me in culpa qui officia deserunt mollit anim..</p>
+    <div class="rightnav">
+
+  {% if user.is_authenticated %}
+      <li>User: {{ user.get_username }}</li>
+      {% if perms.news.add_article %}
+            <a href="/admin">Добавить статью</a>
+      {% endif %}
+
+      {% if perms.dealers.add_dealer %}
+            <a href="/dealers/add_dealer">Добавить дилера</a>
+      {% endif %}
+
+    <a href="/accounts/logout">Logout</a>
+
+  {% else %}
+
+    <a href="/accounts/login">Login</a>
+
+  {% endif %}
+
     </div>
+
     <div class="card">
       <h3>Popular Post</h3>
       <div class="fakeimg">Image</div><br>
