--- a/dealers/templates/city_list.html
+++ b/dealers/templates/city_list.html
@@ -22,9 +22,9 @@
 
 {% block content %}
         <div class="grid-container">
-            {% for dealer in dealer_list %}
+            {% for city, city_slug in city_list.items %}
             <div class="grid-item">
-                <h2><a href="{{ dealer.pk }}/">{{ dealer.company_name }}</a></h2>
+                <h2><a href="{{ city_slug }}/">{{ city }}</a></h2>
             </div>
             {% endfor %}
         </div>
