--- a/news/templates/news.html
+++ b/news/templates/news.html
@@ -1,29 +1,56 @@
 {% extends 'base.html' %}
 
 {% block content %}
-{% for article in object_list %}
-    <div class="card">
-      <h2><a href="{% url 'article_detail' article.slug %}">{{ article.title }}</a></h2>
-      <h5>{{ article.datetime }}</h5>
-      <div class="fakeimg" style="height:200px;"><img src="../media/{{ article.image }}" style="width:100%"></div>
-      <p>{{ article.description }}</p>
-    </div>
-{% endfor %}
-    <div class="pagination">
-    <span class="step-links">
-        {% if page_obj.has_previous %}
-            <a href="?page=1">&laquo; first</a>
-            <a href="?page={{ page_obj.previous_page_number }}">previous</a>
-        {% endif %}
 
-        <span class="current">
-            Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}.
-        </span>
+    <div class="container-fluid pb-4 pt-4 paddding">
+        <div class="container paddding">
+            <div class="row mx-0">
+                <div class="col-md-8 animate-box" data-animate-effect="fadeInLeft">
+                    <div>
+                        <div class="fh5co_heading fh5co_heading_border_bottom py-2 mb-4">News</div>
+                    </div>
+
+{% for article in object_list %}
+                    <div class="row pb-4">
+                        <div class="col-md-5">
+                            <div class="fh5co_hover_news_img">
+                                <div class="fh5co_news_img"><img src="../media/{{ article.image }}" alt=""/></div>
+                            <div></div>
+                            </div>
+                        </div>
+                    <div class="col-md-7 animate-box">
+                        <a href="{% url 'article_detail' article.slug %}" class="fh5co_magna py-2"> {{ article.title }}
+                        </a> <a href="#" class="fh5co_mini_time py-3"> {{ article.author }} - {{ article.datetime }} </a>
+                        <div class="fh5co_consectetur"> {{ article.description }}
+                        </div>
+                    </div>
+                    </div>
+
+{% endfor %}
+                </div>
+            </div>
+
+
+        <div class="row mx-0">
+            <div class="col-12 text-center pb-4 pt-4">
+                {% if page_obj.has_previous %}
+                    <a href="?page=1" class="btn_pagging">First</a>
+                    <a href="?page={{ page_obj.previous_page_number }}" class="btn_mange_pagging"><i class="fa fa-long-arrow-left"></i>&nbsp;&nbsp; Previous</a>
+
+                {% endif %}
+
+
+                <a href="?page={{ page_obj.number }}" class="btn_pagging">{{ page_obj.number }}</a>
 
         {% if page_obj.has_next %}
-            <a href="?page={{ page_obj.next_page_number }}">next</a>
-            <a href="?page={{ page_obj.paginator.num_pages }}">last &raquo;</a>
+
+            <a href="?page={{ page_obj.next_page_number }}" class="btn_mange_pagging">Next <i class="fa fa-long-arrow-right"></i>&nbsp;&nbsp; </a>
+            <a href="?page={{ page_obj.paginator.num_pages }}" class="btn_pagging">Last</a>
         {% endif %}
-    </span>
+             </div>
+        </div>
+
     </div>
+    </div>
+
 {% endblock content %}
